--- a/StudentInternshipManagement/Web.config
+++ b/StudentInternshipManagement/Web.config
@@ -28,7 +28,7 @@
     </logger>
   </log4net>
   <connectionStrings>
-    <add name="StudentInternshipManagement" connectionString="Data Source=DESKTOP-ILL1CD5;Initial Catalog=StudentInternshipManagement;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="StudentInternshipManagement" connectionString="Data Source=.;Initial Catalog=StudentInternshipManagement;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -39,6 +39,8 @@
     <add key="mailPort" value="587" />
     <add key="mailAccount" value="tv.duc95@gmail.com" />
     <add key="mailPassword" value="fertofsxlvrlogpl" />
+    <add key="DatabaseInitializerForType Models.ApplicationDbContext, Models"
+         value="Models.DataInitializer, Models" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
